--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ name = "pypi"
 
 [requires]
 
-python_version = "3.5"
+#python_version = "3.5"
 
 
 [packages]
@@ -21,4 +21,5 @@ pyqt5 = "*"
 tensorflow = "*"
 pytest = "*"
 pillow = "*"
-pylibfreenect2 = "*"
+#pylibfreenect2 = "*"
+requests = "*"
