--- a/Pipfile
+++ b/Pipfile
@@ -11,15 +11,14 @@ name = "pypi"
 
 [requires]
 
-#python_version = "3.5"
+python_version = "3.5"
 
 
 [packages]
 
-opencv-python = "*"
-pyqt5 = "*"
 tensorflow = "*"
+opencv-python = "*"
+"PyQt5" = "*"
 pytest = "*"
-pillow = "*"
-#pylibfreenect2 = "*"
+Pillow = "*"
 requests = "*"
