Changes to make the program run on my home machine. Cleaned up the code in main to make easier to run the program.

--- a/Pipfile
+++ b/Pipfile
@@ -1,25 +1,17 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [dev-packages]
-
-
-
-#[requires]
-#python_version = "3.5"
-
+pytest-cov = "*"
+pytest-pythonpath = "*"
+matplotlib = "*"
 
 [packages]
-
 tensorflow = "*"
 opencv-python = "*"
-PyQt5 = "*"
-pytest = "*"
-pillow = "*"
-#pylibfreenect2 = "*"
+#PyQt5 = "*"
 Pillow = "*"
 requests = "*"
+#SIP = "*"
