Migrated to a single setup.cfg, updated readme, main, etc.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,17 +1,35 @@
+#[aliases]
+#test=pytest
+
+[tool:pytest]
+testpaths = dora/tests
+python_paths = dora/
+
+
+
 # .coveragerc to control coverage.py
-[run]
+[coverage:run]
 branch = True
+
+# Look here
+source = 
+    dora
+
+# omit these directories and files
 omit =
+    # Omit tests?
+    # dora/tests/*
     # omit anything in a .local directory anywhere
     */.local/*
     # omit everything in /usr
     /usr/*
-    # omit these directories
+    *__init__*
+    # Omit the models as they are not our code
     dora/core/neuralnet/object_detection/*
     dora/core/neuralnet/ssd_mobilenet_v1_coco_11_06_2017/*
     dora/core/neuralnet/utils/*
 
-[report]
+[coverage:report]
 # Regexes for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
@@ -19,7 +37,8 @@ exclude_lines =
 
     # Don't complain about missing debug-only code:
     def __repr__
-    if self\.debug
+    if self.debug
+    if settings.DEBUG
 
     # Don't complain if tests don't hit defensive assertion code:
     raise AssertionError
@@ -31,5 +50,5 @@ exclude_lines =
 
 ignore_errors = True
 
-[html]
+[coverage:html]
 directory = coverage_html_report
