Added tests for main and more coverage information when running pytest.

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ python_paths = dora/
 branch = True
 
 # Look here
-source = 
+source =
     dora
 
 # omit these directories and files
@@ -48,6 +48,7 @@ exclude_lines =
     if 0:
     if __name__ == .__main__.:
 
+show_missing = True
 ignore_errors = True
 
 [coverage:html]
