Changes to support closing and starting the http server. Also succeeded in GET requesting json. I messed with the core instance however and this implementation is not ideal.

--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 pytest = "*"
 pytest-cov = "*"
 pytest-pythonpath = "*"
-matplotlib = "*"
+pytest-qt = "*"
 
 [packages]
 tensorflow = "*"
