--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "pythonPath": "${config:python.pythonPath}",
             "program": "${file}",
             "cwd": "${workspaceRoot}",
-            "args": ["train", "D:\\My Documents\\My Projects\\dora\\dora\\rocks\\Train","D:\\My Documents\\My Projects\\dora\\dora\\Rocks\\Test"],
+            "args": ["train", "D:\\My Documents\\My Projects\\dora\\dora\\rocks\\Train","D:\\My Documents\\My Projects\\dora\\dora\\rocks\\Test"],
             "env": {},
             "envFile": "${workspaceRoot}/.env",
             "debugOptions": [
