Test fixes and linting for lots of files. all tests run.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ omit =
     dora/core/neuralnet/object_detection/*
     dora/core/neuralnet/ssd_mobilenet_v1_coco_11_06_2017/*
     dora/core/neuralnet/utils/*
+    dora/core/neuralnet/slim/*
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
